# Cosmic-Mycelium

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTINUOUS_PROCESS.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  Makefile  P0_P2_FIXES.md  PROJECT_MANIFEST.md  README.md  commitlint.config.js  coverage.json  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.yml  gui_server.py  pyproject.toml
.github/workflows/: ci.yml
cosmic_mycelium/: __init__.py  __main__.py
cosmic_mycelium/cluster/: collective_intelligence.py  consensus.py  flow_router.py  network.py  node_discovery.py  node_manager.py
cosmic_mycelium/common/: __init__.py  config_manager.py  data_packet.py  feature_code.py  fractal.py  physical_fingerprint.py  situation.py  theia_model.py
cosmic_mycelium/global/: access_protocol.py
cosmic_mycelium/infant/: __init__.py  breath_bus.py  feature_manager.py  fossil.py  fractal_bus.py  hic.py  knowledge_store.py  main.py  mini.py  sensors.py
cosmic_mycelium/infant/core/: __init__.py  active_perception.py  embodied_loop.py  embodied_metacognition.py  layer_1_timescale_segmenter.py  layer_2_semantic_mapper.py  layer_3_slime_explorer.py  layer_4_myelination_memory.py  layer_5_superbrain.py  layer_6_symbiosis_interface.py  semantic_vector_index.py  skill_abstractor.py
cosmic_mycelium/infant/engines/: __init__.py  engine_bitnet.py  engine_lnn.py  engine_rnn_transformer.py  engine_sympnet.py  engine_theia.py
cosmic_mycelium/infant/network/: rate_limiter.py
cosmic_mycelium/infant/skills/: __init__.py  base.py  lifecycle.py  loader.py  registry.py  resource_lock_manager.py
cosmic_mycelium/infant/skills/collective/: __init__.py  knowledge_transfer.py  negotiation.py  proposal_generator.py
cosmic_mycelium/infant/skills/physics/: __init__.py  physics_experiment.py
cosmic_mycelium/infant/skills/research/: __init__.py  experiment_designer.py  question_generator.py  research_skill.py  tool_interface_example.py
cosmic_mycelium/infant/skills/social/: __init__.py  social_learning.py
cosmic_mycelium/inspirations/autoresearch/: knowledge_schema.py  tool_interface_example.py
cosmic_mycelium/scripts/: __init__.py  benchmark_physics.py  run_cluster.py  run_infant.py  scale_test.py  stability_test.py  stress_test_physics.py
cosmic_mycelium/utils/: __init__.py  embeddings.py  health.py  logging.py  metrics.py  tracing.py
docs/: ROADMAP.md  api-reference.md  architecture.md  gui-report.md  layers.md  physics-anchor.md
docs/examples/: fractal_swarm.py
gui/: package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src/components/: EchoHeatmap.tsx  EnergyChart.tsx  EnergyConservationChart.tsx  Header.tsx  MainContent.tsx  Mycelium3D.tsx  ScaleCard.tsx  Sidebar.tsx  SpringMassSim.tsx  TranslationFlow.tsx
gui/src/stores/: useAppStore.ts  useFractalStore.ts  useSystemStore.ts
gui/src/views/: Dashboard.tsx  FractalDialogue.tsx  InfantDetail.tsx  InfantList.tsx  PhysicsLab.tsx
monitoring/: grafana_dashboard_cosmic_mycelium.json  otel-collector.yaml  prometheus.yml  registry.conf  rules.yml
monitoring/grafana/dashboards/: cluster-overview.json  dashboard-provider.yaml
monitoring/grafana/datasources/: datasources.yaml
scripts/: benchmark_hotpath.py  benchmark_performance.py  benchmark_physics.py  factory_setup.py  train_theia.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: test_cluster_scale.py  test_embodied_loop_integration.py  test_infant_cycle.py  test_parallel_stress.py  test_performance_budget.py  test_research_infant.py  test_research_parallel.py  test_run_cluster.py  test_run_infant.py  test_serialization.py  test_theia_integration.py  test_two_infant_symbiosis.py
tests/physics/: __init__.py  test_energy_conservation.py
tests/unit/: test_active_perception.py  test_async_skills.py  test_autovoting.py  test_breath_bus.py  test_collective_intelligence.py  test_config_manager.py  test_consensus.py  test_consensus_execution.py  test_cross_node_energy.py  test_data_packet.py  test_disambiguate_intent.py  test_dynamic_scheduling.py  test_embodied_loop.py  test_embodied_metacognition.py  test_engine_bitnet.py  test_feature_manager.py  test_flow_router.py  test_flow_router_gaps.py  test_fractal_dialogue.py  test_fractal_integration.py  test_global_access.py  test_hic.py  test_hic_stability.py  test_inverse_model.py  test_knowledge_store_concurrency.py  test_knowledge_store_vector.py  test_knowledge_transfer.py  test_knowledge_transfer_network.py  test_main.py  test_metrics.py  test_mini_infant.py  test_myelination.py  test_negotiation_skill.py  test_node_manager.py  test_packet_latency.py  test_physical_fingerprint.py  test_physics_experiment_skill.py  test_proposal_generator.py  test_research_loop.py  test_research_skill.py  (+22 more)
